--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,11 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "bcryptjs": "^3.0.2",
+    "config": "^4.0.0",
+    "express": "^4.19.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0"
   }
 }
